# project-init

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
project-init/: __main__.py  config.py  generator.py  setup_env.py
project_init/: main.py  requirements.txt
project_init/styles/: colors.py
project_init/templates/: aiogram.py  pyqt.py
project_init/utils/: env.py  structure.py
